tests/ui/errors/snapshots/parse_expected_declaration.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:1]
 1 │ 
 2 │ 123
   · ─┬─
   ·  ╰── expected declaration
   ╰────
  help: At the top level of a file, Lisette expects `fn`, `struct`, `enum`, `interface`, `impl`, `const`, `import`, or `type` · code: [parse.expected_declaration]
