tests/ui/errors/snapshots/parse_generic_bounds_missing_plus.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:17]
 3 │ interface Clone {}
 4 │ fn f<T: Display Clone>() {}
   ·                 ──┬──
   ·                   ╰── missing `+` between bounds
   ╰────
  help: Use `+` to separate multiple bounds · code: [parse.syntax_error]
