tests/ui/errors/snapshots/parse_go_slice_syntax_in_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:14]
 1 │ 
 2 │ fn test(arr: []int) {}
   ·              ──┬──
   ·                ╰── invalid syntax for `Slice`
   ╰────
  help: Use `Slice<int>` instead of `[]int` · code: [parse.syntax_error]
