tests/ui/errors/snapshots/parse_go_style_goroutine_call.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:5:3]
 4 │ fn test() {
 5 │   go some_job()
   ·   ─┬
   ·    ╰── invalid syntax
 6 │ }
   ╰────
  help: Use `task { ... }` or `task my_function()` to spawn a concurrent task · code: [parse.syntax_error]
