tests/ui/errors/snapshots/parse_imaginary_pattern_not_allowed.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:5]
 3 │   match x {
 4 │     4i => 1,
   ·     ─┬
   ·      ╰── not allowed
 5 │     _ => 0,
   ╰────
  help: Imaginary literals are not supported in patterns · code: [parse.syntax_error]
